# tinyGui

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  tinygui.pc.in  tinyguiconf.h.in
3rd/: CMakeLists.txt
cmake/: FindSDL2.cmake  cross_toolchain.cmake
docs/: architecture.md  gui.key  introduction.key
porting/: common.cmake  display.h  input.h
porting/linux/: porting.cmake
porting/linux/fbdev/: display.c  display.h  input.c  input.h  loop.c  loop.h
porting/macOS/: porting.cmake
porting/macOS/sdl/: display.c  display.h  input.c  input.h  loop.c  loop.h
scripts/: build-config.sh  build.sh  set-build-config.sh
src/: 3rd.h  CMakeLists.txt  tinygui.c  tinygui.h  types.h
src/acc/sw/: sw_acc.c  sw_acc.h  sw_blend.c  sw_blend.h  sw_fill.c  sw_fill.h  sw_flush.c  sw_flush.h  sw_map.c  sw_map.h  sw_mem.c  sw_mem.h
src/core/: buffer.c  buffer.h  event.c  event.h  input.c  input.h  layer.c  layer.h  loop.c  loop.h  object.c  object.h  reaction.c  reaction.h  renderer.c  renderer.h  screen.c  screen.h  time.c  time.h  tinygui.c
src/gui/: button.c  button.h
src/proxy/: blend.c  blend.h  display.c  display.h  fill.c  fill.h  input.c  input.h  memory.c  memory.h  proxy.c  proxy.h
src/utils/: cobj.h
tests/: CMakeLists.txt  event.c  example.c
